traefik/templates/04traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: monitoring
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.5
          args:
            - --log.level=DEBUG
            - --api
            - --api.insecure
            - --entrypoints.web.address=:80
            - --entrypoints.pro-gateway.address=:8000
            - --entrypoints.pro-gateway-secure.address=:8001
            - --providers.kubernetescrd
          ports:
            - name: web
              containerPort: 80
            - name: admin
              containerPort: 8080
            - name: pro-gateway
              containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
    - protocol: TCP
      port: 8000
      name: pro-gateway
      targetPort: 8000
    - protocol: TCP
      port: 8001
      name: pro-gateway-secure
      targetPort: 8001
