traefik/templates/05IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute.pushgateway
  namespace: monitoring

spec:
  entryPoints:
    - pro-gateway
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
      - name: prometheus-pushgateway
        port: 9091
