traefik/templates/07IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute.pushgatewaysecure
  namespace: monitoring

spec:
  entryPoints:
    - pro-gateway-secure
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
      - name: prometheus-pushgateway
        port: 9091
  tls:
    store: 
      name: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute.pushgateway
  namespace: monitoring

spec:
  entryPoints:
    - pro-gateway
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
      - name: prometheus-pushgateway
        port: 9091

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute.prometheusserver
  namespace: monitoring

spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
      - name: prometheus-server
        port: 80
